# cholla-vis

./: .gitignore  README.md  pyproject.toml  sample-plot.py  utils.py
analysis/: ExpectedVcircAnalysis.ipynb  HaloGasTest.ipynb  InvestigatingHeatingCooling.ipynb
analysis-notebooks/: ScaleHeightSanityCheck.ipynb  SpatialPlotting.ipynb
analysis-scripts/: aggregate_fluxes.py  concat_snaps.py  fluxes.py  gen_SNe_tables.py  make_profile.py  plot_2d_output.py  scale-height.py
cholla-vis/: ICs.py  deriv.py  examination_plot_utils.py  flux_process.py  galaxy_profile.py  profile_creator.py  sample-plot.py  sample_plot.py  utils.py  yt_gravity.py
sample-conf-files/: crc.toml  sample.toml
sample-slurm-script/: launch-job.sh
src/cholla_vis/: SNe_data.py  conf.py  examination_plot_utils.py  galaxy_profile.py  log_parse.py  parallel_spec.py  profile_creator.py  registry.py  sample_plot.py  yt_gravity.py
src/cholla_vis/flux/: flux_process.py  fluxes.py  ref_fluxes.py
unsorted-notebooks/: ExpectedVcircAnalysis.ipynb  NewExpectedVcircAnalysis.ipynb  SNR.ipynb
