[build-system]
# here we specify the build-backend. For context:
# - tools like pip and uv are example of build-frontends. Users directly
#   interact with 
# - tools like setuptools, hatchling, scikit-build-core, meson-python are all
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cholla-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py",
  "matplotlib",
  "numpy",
  "pandas",
  "unyt",
  "yt"
]


[tool.hatch.build.targets.sdist]
packages = ["src/cholla_vis"]

[tool.hatch.build.targets.wheel]
packages = ["src/cholla_vis"]
